--- a/xcxtweb/.settings/org.eclipse.wst.common.component
+++ b/xcxtweb/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
 		<property name="java-output-path" value="/xcxtweb/target/classes"/>
-        <property name="context-root" value="xcxtweb"/>
+        <property name="context-root" value="/"/>
 	</wb-module>
 </project-modules>
